--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -11,42 +11,167 @@
   border-bottom: 2px double $black;
   background-color: $white;
   .headerCont {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     @include flex($a: center);
   }
-
   h1 {
+    margin-left: 1em;
     @include flex($a: center);
     img {
       height: 4em;
     }
   }
-  nav {
-    flex-basis: 45%;
-    //300px
-    min-width: 18.75em;
-  }
-  ul {
-    @include flex($a: center);
-    font-size: 1.5em;
-    font-family: $fontMemories;
-    li:hover {
-      color: $yellow;
-    }
-    button {
-      position: relative;
-    }
-    button.on::before {
-      content: "";
-      width: 100%;
-      height: 5px;
+  .menuCont {
+    position: relative;
+    @extend .hide;
+    .menu {
+      width: 20px;
+      height: 20px;
       position: absolute;
-      bottom: 5px;
-      left: 0;
-      border-radius: 5px;
-      opacity: 0.5;
-      background-color: $yellow;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: 1s all;
+      div {
+        position: absolute;
+        width: 20px;
+        height: 3.5px;
+        background-color: $black;
+        border-radius: 10px;
+        transition: 1s all;
+        &:nth-child(1) {
+          transform: rotate(58deg);
+          top: 9px;
+          left: 4.5px;
+        }
+        &:nth-child(2) {
+          transform: rotate(-58deg);
+          top: 9px;
+          left: -4.5px;
+        }
+        &:nth-child(3) {
+          width: 22px;
+          bottom: 0px;
+          left: -1px;
+        }
+      }
+      &:hover {
+        div {
+          background-color: $yellow;
+          &:nth-child(1) {
+            transform: rotate(0);
+            top: 0;
+            left: 0;
+          }
+          &:nth-child(2) {
+            transform: rotate(0) translateY(-50%);
+            top: 50%;
+            left: 0;
+          }
+          &:nth-child(3) {
+            width: 20px;
+            bottom: 0;
+            left: 0;
+          }
+        }
+      }
+    }
+  }
+
+  nav {
+    margin-right: 1em;
+    ul {
+      @include flex($a: center);
+      font-size: 1.5em;
+      font-family: $fontMemories;
+      li {
+        margin-left: 6.94vw;
+        &:hover {
+          color: $yellow;
+        }
+      }
+
+      button {
+        position: relative;
+      }
+      button.on::before {
+        content: "";
+        width: 100%;
+        height: 5px;
+        position: absolute;
+        bottom: 5px;
+        left: 0;
+        border-radius: 5px;
+        opacity: 0.5;
+        background-color: $yellow;
+      }
+    }
+    .close {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .header {
+    .headerCont {
+      max-width: 1000px;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header {
+    .headerCont {
+      max-width: 600px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .header {
+    .headerCont {
+      max-width: 350px;
+    }
+    .menuCont {
+      right: 25px;
+      display: block;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      right: -150px;
+      width: 30%;
+      height: 100%;
+      background-color: $white;
+      transition: 0.5s all;
+      ul {
+        display: block;
+        margin-top: 30px;
+        li {
+          margin: 10px 10px;
+          &::before {
+            content: " - ";
+          }
+        }
+        button.on::before {
+          bottom: 3px;
+        }
+      }
+      .close {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        display: block;
+        z-index: 10;
+      }
+
+      &.navMode {
+        right: -10px;
+      }
     }
   }
 }
