--- a/src/scss/_project.scss
+++ b/src/scss/_project.scss
@@ -2,7 +2,6 @@
 
 .Project {
   position: relative;
-  overflow: hidden;
   .buttonWrapper {
     width: 75%;
     min-height: 25em;
@@ -30,8 +29,9 @@
       .projectItem {
         width: 50%;
         height: 50%;
-        position: relative;
         padding: 1em;
+        position: relative;
+        overflow: scroll;
         box-sizing: border-box;
         font-size: 0.875em;
         header {
@@ -81,6 +81,7 @@
           }
           li {
             line-height: 1.6;
+            word-break: keep-all;
             &::before {
               content: " - ";
             }
@@ -144,10 +145,64 @@
   .bg {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     opacity: 0.5;
     z-index: -10;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .Project {
+    .buttonWrapper {
+      width: 90%;
+      min-height: 23em;
+      @include flex($a: center);
+      position: relative;
+      z-index: 10;
+    }
+    .projectWrapper {
+      width: 90%;
+    }
+
+    .projectBtn {
+      img {
+        width: 1em;
+        height: 2em;
+      }
+      &.top {
+        top: -1em;
+      }
+      &.bottom {
+        bottom: -1em;
+      }
+    }
+    .notionLink {
+      width: 80%;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .Project {
+    .buttonWrapper {
+      width: 90%;
+    }
+    .notionLink {
+      width: 80%;
+      margin: 10px auto 0;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .Project {
+    .buttonWrapper {
+      width: 100%;
+    }
+    .notionLink {
+      width: 90%;
+    }
   }
 }
