--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -5,12 +5,12 @@ body {
 }
 #root,
 .App {
-  height: 100%;
+  height: 100vh;
 }
 
 main {
   max-width: 1200px;
-  height: 94%;
+  height: 100%;
   margin: 0 auto;
   border-left: 2px double $black;
   border-right: 2px double $black;
@@ -62,8 +62,15 @@ main {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .App {
     font-size: 9px;
+  }
+  main {
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+    border-left: 2px double $black;
+    border-right: 2px double $black;
   }
 }
