--- a/src/scss/_introduce.scss
+++ b/src/scss/_introduce.scss
@@ -26,11 +26,11 @@
       }
       p {
         margin: 0.2em 0;
-        line-height: 1.3;
+        line-height: 1.5;
         word-break: keep-all;
       }
       li {
-        margin-top: 0.5em;
+        margin-top: 1em;
         p:nth-child(1) {
           font-family: $title;
         }
@@ -108,6 +108,8 @@
 
 @media screen and (max-width: 510px) {
   .Introduce {
+    @include flex($a: center, $j: center);
+    flex-direction: column;
     .introWapper {
       .imgWrapper {
         background: url("../assets/introduce/사진.jpg") no-repeat center -50px /
@@ -115,6 +117,7 @@
       }
     }
     .wiseWapper {
+      width: 100%;
       display: block;
       blockquote {
         width: auto;
